--- a/gyesangi.html
+++ b/gyesangi.html
@@ -18,7 +18,8 @@
     <div>7</div>
     <div>8</div>
     <div>9</div>
-    <div>c</div>
+    <div>AC</div>
+    <div>DEL</div>
     <div>+</div>
     <div>-</div>
     <div>*</div>
