--- a/gyesangi.html
+++ b/gyesangi.html
@@ -8,23 +8,12 @@
 </head>
 
 <body>
-    <div>0</div>
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5</div>
-    <div>6</div>
-    <div>7</div>
-    <div>8</div>
-    <div>9</div>
-    <div>AC</div>
-    <div>DEL</div>
-    <div>+</div>
-    <div>-</div>
-    <div>*</div>
-    <div>%</div>
-    <div>=</div>
+    <div class="calculator-grid">
+        <div class="output">
+            <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
+        </div>
+    </div>
 </body>
 
 </html>
