--- a/gyesangi.html
+++ b/gyesangi.html
@@ -13,6 +13,8 @@
             <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
+        <button data-all-clear class="button gray span-two">AC</button>
+
     </div>
 </body>
 
