--- a/gyesangi.html
+++ b/gyesangi.html
@@ -13,8 +13,23 @@
             <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
-        <button data-all-clear class="button gray span-two">AC</button>
-
+        <button>AC</button>
+        <button>DEL</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>0</button>
+        <button>+</button>
+        <button>-</button>
+        <button>*</button>
+        <button>%</button>
+        <button>=</button>
     </div>
 </body>
 
