--- a/gyesangi.html
+++ b/gyesangi.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>U Na Gyesangi</title>
+    <link rel="stylesheet" href="gyesangi.css">
 </head>
 
 <body>
-    <div class="calculator-grid">
+    <div class="gsg">
         <div class="output">
             <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
