--- a/gyesangi.html
+++ b/gyesangi.html
@@ -10,27 +10,23 @@
 
 <body>
     <div class="gsg">
-        <div class="output">
-            <div data-previous-operand class="previous-operand"></div>
-            <div data-current-operand class="current-operand"></div>
-        </div>
-        <button>AC</button>
-        <button>DEL</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>0</button>
-        <button>+</button>
-        <button>-</button>
-        <button>*</button>
-        <button>%</button>
-        <button>=</button>
+        <button class="clear">AC</button>
+        <button delete class="button black">DEL</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="number">0</button>
+        <button class="gs">+</button>
+        <button class="gs">-</button>
+        <button class="gs">*</button>
+        <button class="gs">%</button>
+        <button class="gs">=</button>
     </div>
     <script src="gyesangi.js"></script>
 </body>
