계산기 만들기

--- a/gyesangi.html
+++ b/gyesangi.html
@@ -10,18 +10,18 @@
 
 <body>
     <div class="gsg">
-        <button class="clear">AC</button>
-        <button delete class="button black">DEL</button>
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-        <button class="number">0</button>
+        <button data-all-clear class="button gray">AC</button>
+        <button data- delete class="button black">DEL</button>
+        <button data-number class="number">1</button>
+        <button data-number class="number">2</button>
+        <button data-number class="number">3</button>
+        <button data-number class="number">4</button>
+        <button data-number class="number">5</button>
+        <button data-number class="number">6</button>
+        <button data-number number class="number">7</button>
+        <button data-number class="number">8</button>
+        <button data-number class="number">9</button>
+        <button data-number class="number">0</button>
         <button class="gs">+</button>
         <button class="gs">-</button>
         <button class="gs">*</button>
