계산기 만들기

--- a/gyesangi.html
+++ b/gyesangi.html
@@ -12,16 +12,16 @@
     <div class="gsg">
         <button data-all-clear class="button gray">AC</button>
         <button data- delete class="button black">DEL</button>
-        <button data-number class="number">1</button>
-        <button data-number class="number">2</button>
-        <button data-number class="number">3</button>
-        <button data-number class="number">4</button>
-        <button data-number class="number">5</button>
-        <button data-number class="number">6</button>
-        <button data-number number class="number">7</button>
-        <button data-number class="number">8</button>
-        <button data-number class="number">9</button>
-        <button data-number class="number">0</button>
+        <button data-number class="button">1</button>
+        <button data-number class="button">2</button>
+        <button data-number class="button">3</button>
+        <button data-number class="button">4</button>
+        <button data-number class="button">5</button>
+        <button data-number class="button">6</button>
+        <button data-number number class="button">7</button>
+        <button data-number class="button">8</button>
+        <button data-number class="button">9</button>
+        <button data-number class="button">0</button>
         <button class="gs">+</button>
         <button class="gs">-</button>
         <button class="gs">*</button>
