계산기 만들기

--- a/gyesangi.html
+++ b/gyesangi.html
@@ -22,11 +22,11 @@
         <button data-number class="button">8</button>
         <button data-number class="button">9</button>
         <button data-number class="button">0</button>
-        <button class="gs">+</button>
-        <button class="gs">-</button>
-        <button class="gs">*</button>
-        <button class="gs">%</button>
-        <button class="gs">=</button>
+        <button data-number class="gs">+</button>
+        <button data-number class="gs">-</button>
+        <button data-number class="gs">*</button>
+        <button data-number class="gs">%</button>
+        <button data-number class="gs">=</button>
     </div>
     <script src="gyesangi.js"></script>
 </body>
