계산기 만들기

--- a/gyesangi.html
+++ b/gyesangi.html
@@ -9,25 +9,28 @@
 </head>
 
 <body>
-    <div class="gsg">
-        <button data-all-clear class="button gray">AC</button>
-        <button data- delete class="button black">DEL</button>
-        <button data-number class="button">1</button>
-        <button data-number class="button">2</button>
-        <button data-number class="button">3</button>
-        <button data-number class="button">4</button>
-        <button data-number class="button">5</button>
-        <button data-number class="button">6</button>
-        <button data-number number class="button">7</button>
-        <button data-number class="button">8</button>
-        <button data-number class="button">9</button>
-        <button data-number class="button">0</button>
-        <button data-number class="gs">+</button>
-        <button data-number class="gs">-</button>
-        <button data-number class="gs">*</button>
-        <button data-number class="gs">%</button>
-        <button data-number class="gs">=</button>
-    </div>
+    <main>
+        <input type="text" disabled>
+        <div class="gsg">
+            <button>AC</button>
+            <button>DEL</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>%</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3+</button>
+            <button>+</button>
+            <button>0</button>
+            <button>.</button>
+            <button>=</button>
+        </div>
+    </main>
     <script src="gyesangi.js"></script>
 </body>
 
