계산기 만들기

--- a/gyesangi.html
+++ b/gyesangi.html
@@ -12,7 +12,7 @@
     <main>
         <input type="text" disabled>
         <div class="gsg">
-            <button>AC</button>
+            <button class="ac">AC</button>
             <button>DEL</button>
             <button>7</button>
             <button>8</button>
@@ -26,7 +26,7 @@
             <button>2</button>
             <button>3+</button>
             <button>+</button>
-            <button>0</button>
+            <button class="zero">0</button>
             <button>.</button>
             <button>=</button>
         </div>
