--- a/gyesangi.html
+++ b/gyesangi.html
@@ -10,25 +10,25 @@
 
 <body>
     <main>
-        <input type="text" disabled>
+        <input type="text" value="0" disabled>
         <div class="gsg">
-            <button class="ac">AC</button>
-            <button>DEL</button>
+            <button data-type="ac" class="ac">AC</button>
+            <button data-type="operator">DEL</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>%</button>
+            <button data-type="operator">%</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>-</button>
+            <button data-type="operator">-</button>
             <button>1</button>
             <button>2</button>
             <button>3+</button>
-            <button>+</button>
+            <button data-type="operator">+</button>
             <button class="zero">0</button>
             <button>.</button>
-            <button>=</button>
+            <button data-type="equals" class="equals">=</button>
         </div>
     </main>
     <script src="gyesangi.js"></script>
