계산기 만들기

--- a/gyesangi.html
+++ b/gyesangi.html
@@ -24,14 +24,14 @@
             <button data-type="operator">-</button>
             <button>1</button>
             <button>2</button>
-            <button>3+</button>
+            <button>3</button>
             <button data-type="operator">+</button>
             <button class="zero">0</button>
             <button>.</button>
             <button data-type="equals" class="equals">=</button>
         </div>
     </main>
-    <script src="gyesangi.js"></script>
+    <script src="./gyesangi.js"></script>
 </body>
 
 </html>
