--- a/gyesangi.html
+++ b/gyesangi.html
@@ -10,14 +10,14 @@
 
 <body>
     <main>
-        <input type="text" value="0" disabled>
-        <div class="gsg">
+        <input type="text" disabled>
+        <div class="button-wrap">
             <button data-type="ac" class="ac">AC</button>
-            <button data-type="operator">DEL</button>
+            <button data-type="operator">&divide;</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button data-type="operator">%</button>
+            <button data-type="operator">&times;</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
@@ -31,7 +31,7 @@
             <button data-type="equals" class="equals">=</button>
         </div>
     </main>
-    <script src="./gyesangi.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
