--- a/gyesangi.html
+++ b/gyesangi.html
@@ -31,7 +31,7 @@
             <button data-type="equals" class="equals">=</button>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="./gyesangi.js"></script>
 </body>
 
 </html>
